--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,28 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@chakra-ui/icons": "^1.0.0-rc.8",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
-    "typescript": "4.0.2"
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.2"
   },
   "license": "MIT"
 }
