--- a/web/package.json
+++ b/web/package.json
@@ -7,16 +7,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.6",
+    "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@chakra-ui/icons": "^1.0.0-rc.8",
+    "apollo-upload-client": "^14.1.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
+    "graphql": "^15.4.0",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.4"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
