--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.2.6",
@@ -22,6 +23,10 @@
     "react-dropzone": "^11.2.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.19.2",
+    "@graphql-codegen/typescript": "1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.10",
+    "@graphql-codegen/typescript-react-apollo": "^2.1.1",
     "@types/apollo-upload-client": "^14.1.0",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
