--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@chakra-ui/icons": "^1.0.0-rc.8",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.1.1",
     "apollo-upload-client": "^14.1.3",
+    "axios": "^0.21.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "cloudinary-core": "^2.11.3",
+    "cloudinary-react": "^1.6.8",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
